--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.91.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-octicons": "^18.14.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
