--- a/package.json
+++ b/package.json
@@ -15,18 +15,29 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "@tauri-apps/plugin-opener": "^2",
+    "mode-watcher": "^1.1.0"
   },
   "devDependencies": {
+    "@internationalized/date": "^3.8.1",
+    "@lucide/svelte": "^0.515.0",
     "@sveltejs/adapter-static": "^3.0.6",
     "@sveltejs/kit": "^2.9.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@tauri-apps/cli": "^2",
+    "bits-ui": "^2.8.6",
+    "clsx": "^2.1.1",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "sass": "^1.91.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.3.7",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
